assets/frontend/css/fonts.css
/* ALLER FONT FAMILY */

/* Bold */
@font-face {
    font-family: 'Aller';
    src: url('../fonts/aller/aller_bd-webfont.eot');
    src: local('☺'), url('../fonts/aller/aller_bd-webfont.woff') format('woff'), url('../fonts/aller/aller_bd-webfont.ttf') format('truetype'), url('../fonts/aller/aller_bd-webfont.svg#webfontxG8GSQij') format('svg');
    font-weight: bold;
    font-style: normal;
}

/* Bold Italic */
@font-face {
    font-family: 'Aller';
    src: url('../fonts/aller/aller_bdit-webfont.eot');
    src: local('☺'), url('../fonts/aller/aller_bdit-webfont.woff') format('woff'), url('../fonts/aller/aller_bdit-webfont.ttf') format('truetype'), url('../fonts/aller/aller_bdit-webfont.svg#webfontOMP0x7zQ') format('svg');
    font-weight: bold;
    font-style: italic;
}

/* Italic */
@font-face {
    font-family: 'Aller';
    src: url('../fonts/aller/aller_it-webfont.eot');
    src: local('☺'), url('../fonts/aller/aller_it-webfont.woff') format('woff'), url('../fonts/aller/aller_it-webfont.ttf') format('truetype'), url('../fonts/aller/aller_it-webfont.svg#webfontGJddapE9') format('svg');
    font-weight: normal;
    font-style: italic;
}

/* Regular */
@font-face {
    font-family: 'Aller';
    src: url('../fonts/aller/aller_rg-webfont.eot');
    src: local('☺'), url('../fonts/aller/aller_rg-webfont.woff') format('woff'), url('../fonts/aller/aller_rg-webfont.ttf') format('truetype'), url('../fonts/aller/aller_rg-webfont.svg#webfont0BtdFek5') format('svg');
    font-weight: normal;
    font-style: normal;
}

/* ----------------------------- GENERAL */

body, input, textarea, button {
    font-family: 'Aller', Helvetica, Arial, sans-serif;
    font-size: 13px;
    line-height: 25px;
}

/* Notes/Asides */

p.note {
    font-style: italic;
}

/* Default Magento block styles */

div.block div.block-title {
    font-size: 14px;
    font-weight: bold;
}

div.block div.block-title h2 {
    font-size: 14px;
}

div.block div.block-title strong span {
    font-weight:bold;
}

div.block div.block-content p.block-subtitle {
    font-size: 14px;
    font-weight: bold;
}

div.block div.block-content h2.current-price,
div.block div.block-content h2.original-price {
    font-size:13px;
}

/* ----------------------------- HEADERS */

h1, h2, h3 {
    font-weight: bold;
}

h1 {
    font-size: 16px;
}

h2 {
    font-size: 14px;
}

/* ----------------------------- SHOP LOGO AND IMAGE */

a#branding h2 { 
    line-height: 160px;
}

/* ----------------------------- CART */

section.cart h2 {
    font-size: 14px;
}

section.cart a {
    text-decoration:none;
}

section.cart h2 a {
    font-weight:bold;
}

/* ----------------------------- NAVIGATION */

nav ul a {
    letter-spacing: 1px;
    text-transform: uppercase;
}

/* ----------------------------- MESSAGES */

ul.messages span {
    font-size:12px;
    font-weight:bold;
}

/* ----------------------------- FORMS */

form input[type=text],
form input[type=search],
form input.text,
form input.search,
form textarea {
    font-size: 13px;
    line-height: 15px;
}

p.required {
    font-style: italic;
}

/* ----------------------------- BUTTONS */

a.button,
input.button,
button {
    font-size: 13px;
    font-weight: bold;
    line-height: 14px;
    text-align: center;
}

/* ----------------------------- LAYERED NAVIGATION */

div.block-layered-nav dl dt {
    font-weight: bold;
}

/* ----------------------------- POLL */

div.block-poll form div p.block-subtitle {
    font-size: 13px;
}

/* ----------------------------- PRODUCTS GRID */

ul.products-grid li h2 {
    text-align: center;
}

ul.products-grid li h2 a {
    font-weight: bold;
}

p.price-from span.price,
p.price-to span.price,
p.minimal-price span.price,
h2.current-price {
    font-size: 18px;
}

p.price-from span.price,
p.price-to span.price,
p.minimal-price span.price,
h2.current-price span {
    font-weight:bold; 
}

ul.products-grid li p.price-from,
ul.products-grid li p.price-to,
ul.products-grid li p.minimal-price,
ul.products-grid li a.minimal-price-link,
ul.products-grid li h2.current-price, 
ul.products-grid li h3.original-price,
ul.products-grid li h3.original-price + h2.current-price {
    text-align: right;
}

/* Product options */

table.grouped-items-table {
    text-align:left;
}

section.hproduct table.grouped-items-table p.out-of-stock {
    font-size:12px;
    font-weight:normal;
}

table.grouped-items-table span.price {
    font-size:14px;
}

table.grouped-items-table tbody td,
aside.product-options dl dt label {
    font-weight: bold;
}

/* Out of stock */

section.hproduct p.out-of-stock {
    font-weight: bold;
}


/* ----------------------------- PRODUCTS LIST */
/* (does inherit from products grid) */

ul.list-products li h2 {
    text-align: left;
}

ul.list-products li ul.add-to-links li {
    text-align: left;
}

/* ----------------------------- ADDITIONAL INFORMATION */

aside#additional-information dl dt {
    font-weight: bold;
}

/* ----------------------------- PRODUCT REVIEWS */

/* List of reviews */

ul#reviews-list li h4.summary {
    font-weight: bold;
}

/* ----------------------------- PRODUCT TAGS */

aside#product-tags h3 {
    font-weight: normal;
}

div.box-tags .tags li,
aside#product-tags ul li {
    line-height: 17px;
}

div.box-tags .tags li a,
aside#product-tags ul li a {
    text-decoration: none;
}

aside#product-tags form label {
    line-height: 29px;
}

aside#product-tags p.note {
    text-align: right;
}

table#my-tags-table button,
table#my-tags-table ul.add-to-links {
    text-align: center;
}

/* ----------------------------- CART PAGE */

/* Cart contents table */

table.data-table tr td {
    vertical-align: top;
}

table.data-table thead {
    text-align: left;
}

table.data-table td.product-name h3,
table.data-table td h3.product-name {
    font-size: 13px;
    font-weight: normal;
}

table#cart tbody tr .cart-price span { 
    font-weight:bold;
}

table.data-table tfoot tr td {
    text-align: right;
}

table.data-table tfoot tr td + td {
    text-align: left;
}

table.data-table tfoot tr.last td + td span.price{
    font-weight: bold;
}

/* Related products */

div.block-related ol li.hproduct div.actions ul li {
    text-align: center;
}

aside#related-products h2.current-price,
aside#related-products h3.original-price {
    font-weight:normal;
    font-size:13px;
}

/* Shipping form */

aside.shipping form label {
    font-weight: bold;
}

/* Totals */

aside.totals td {
    font-size:14px;
    font-weight:bold;
}

aside.totals tbody span.price {
    font-size:18px;
}

aside.totals tfoot span.price {
    font-size: 18px;
    font-weight: bold;
}

aside.totals ul li {
    text-align:right;
}

/* CART SIDEBAR */

div.block-cart div.summary h3 {
    font-weight: normal;
}

div.block-cart strong span.price {
    font-weight:bold;
}

div.notes dl dt {
    font-weight: bold;
}

/* ----------------------------- CHECKOUT */

ol#checkoutSteps li h2 em.step-number {
    font-style: normal;
    font-weight: bold;
    text-align: center;
}

ol#checkoutSteps li h3 {
    font-size: 14px;
}

ol#checkoutSteps li h4 {
    font-weight: bold;
}

ol#checkoutSteps li div.buttons-set p.required {
    text-align: left;
}

div.my-account form div.buttons-set p.required,
#create-account div.buttons-set p.required {
    text-align: right;
}

ol#checkoutSteps li#checkout-method div.buttons-set p.required {
    text-align: left;
}

form#co-shipping-method-form div dl dt {
    font-size: 14px;
    font-weight: bold;
}

ol#checkoutSteps span.please-wait {
    float: right;
}

/* ----------------------------- MULTI-SHIPPING CHECKOUT */

.checkout-progress li.active span {
    font-weight: bold;
}

.multiple-checkout .grand-total {
    font-weight: bold;
    text-align: right;
}

.multiple-checkout .grand-total span.price {
    font-weight: bold;
    font-size: 18px;
}

/* ----------------------------- ACCOUNT */

#my-orders-table td.a-center { 
    text-align:center;
}

/* ----------------------------- FOOTER */

footer section h2 {
    font-weight: normal;
}

footer small {
    font-size: 13px;
    text-align: center;
}

